--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "14.2.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.57.1",
