--- a/.github/workflows/build-and-SAST.yml
+++ b/.github/workflows/build-and-SAST.yml
@@ -16,6 +16,8 @@ jobs:
       # Step 2: Setup Node.js environment
       - name: Setup Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: 16
       # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
